--- a/WebSockets/server/package.json
+++ b/WebSockets/server/package.json
@@ -1,12 +1,11 @@
 {
   "name": "server",
   "version": "1.22.22",
-  "description": "package",
   "main": "index.js",
-  "repository": "none",
-  "author": "max",
   "license": "MIT",
-  "private": true,
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
